Fix the deserialization problem of user interface query redis

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,6 +25,8 @@
         <mysql-connector.version>8.0.33</mysql-connector.version> <!-- 确保 MySQL 连接器版本也较新 -->
     </properties>
 
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -72,13 +74,11 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
             <version>${jjwt.version}</version>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>${jjwt.version}</version>
-            <scope>runtime</scope>
         </dependency>
 
         <!-- Lombok (可选，简化POJO) -->
@@ -100,6 +100,11 @@
             <version>2.23.1</version> <!-- 使用最新稳定版本 -->
         </dependency>
 
+        <!--在序列化 JSON 的过程-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
