--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -22,27 +22,33 @@ spring:
       max-lifetime: 1800000 # 30 minutes
 
   # =========================================
-  # MyBatis Configuration
+  # MyBatis Plus Configuration
   # =========================================
-  mybatis:
-    config-location: classpath:mybatis-config.xml # 指定 MyBatis 核心配置文件位置
-    mapper-locations: classpath:mapper/*.xml #
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
+    # use-generated-keys: true # 同上
+    use-column-label: true
+    cache-enabled: true
+    jdbc-type-for-null: NULL
+  type-aliases-package: com.blog.backend.entity
+  mapper-locations: classpath*:/mapper/**/*.xml
 
   # =========================================
   # Spring Data Redis Configuration
   # =========================================
   data:
-    redis:
-      host: localhost
-      port: 6379
-      password: # 如果Redis有密码，请在这里填写
-      timeout: 5000ms # 连接超时时间
-      lettuce:
-        pool:
-          max-active: 8 # 连接池最大连接数
-          max-idle: 8   # 连接池最大空闲连接数
-          min-idle: 0   # 连接池最小空闲连接数
-          max-wait: 10000ms # 连接池最大阻塞等待时间
+#    redis:
+#      host: localhost
+#      port: 6379
+#      password: # 如果Redis有密码，请在这里填写
+#      timeout: 5000ms # 连接超时时间
+#      lettuce:
+#        pool:
+#          max-active: 8 # 连接池最大连接数
+#          max-idle: 8   # 连接池最大空闲连接数
+#          min-idle: 0   # 连接池最小空闲连接数
+#          max-wait: 10000ms # 连接池最大阻塞等待时间
 
   # =========================================
   # Spring AMQP (RabbitMQ) Configuration
